# kquickimageeditor

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  KQuickImageEditorConfig.cmake.in  Mainpage.dox  README.md  koko-animation.mp4.license  metainfo.yaml
autotests/: CMakeLists.txt  stackblurtest.cpp
examples/: KirigamiExample.qml  rektangle.qml
src/: CMakeLists.txt  Messages.sh  annotationconfig.kcfg  imagedocument.cpp  imagedocument.h  imageitem.cpp  imageitem.h  kquickimageditor-index.qdoc  kquickimageeditor.qdoc  kquickimageeditor.qdocconf  resizehandle.cpp  resizehandle.h  resizerectangle.cpp  resizerectangle.h  resources.qrc
src/annotations/: AnnotationSelectionTool.qml  CropTool.qml  HoverOutline.qml  QtCV.h  RectangleSelectionTool.qml  TextTool.qml  annotationdocument.cpp  annotationdocument.h  annotationdocument_p.h  annotationtool.cpp  annotationtool.h  annotationviewport.cpp  annotationviewport.h  history.cpp  history.h  qmlpainterpath.cpp  qmlpainterpath.h  stackblur.cpp  stackblur.h  stackblur_opencv.cpp  traits.cpp  traits.h  utils.h
src/annotations/private/: DashedOutline.qml  Outline.qml  TextContextMenu.qml
src/code/: imagedocument.cpp  imagedocument.h  imageitem.cpp  imageitem.h  kquickimageeditor_plugin.cpp  kquickimageeditor_plugin.h  resizehandle.cpp  resizehandle.h  resizerectangle.cpp  resizerectangle.h
src/code/commands/: cropcommand.h  mirrorcommand.cpp  mirrorcommand.h  resizecommand.cpp  resizecommand.h  rotatecommand.cpp  rotatecommand.h  undocommand.cpp  undocommand.h
src/commands/: cropcommand.cpp  cropcommand.h  mirrorcommand.cpp  mirrorcommand.h  resizecommand.h  rotatecommand.cpp  rotatecommand.h
src/controls/: BasicResizeHandle.qml  CropBackground.qml  RectangleCutout.qml  SelectionBackground.qml  SelectionHandle.qml  SelectionTool.qml  plugins.qmltypes  qmldir
src/controls/qt6/: SelectionHandle.qml
src/qrc/: qmldir  qmldir.license
src/qrc/controls/: BasicResizeHandle.qml  Rectangle.qml
src/ui/: CMakeLists.txt  ImageEditorPage.qml  filedialoghelper.cpp  filedialoghelper.h  kquickimageeditorui.qdoc  kquickimageeditorui.qdocconf
src/ui/private/: AnimatedLoader.qml  AnnotationEditor.qml  AnnotationOptionsToolBarContents.qml  AnnotationsToolBarContents.qml  ButtonGrid.qml  ConfirmDiscardingChanges.qml  ImageView.qml
tests/manual/: BasicAnnotationsTest.qml  SelectionToolCropBackgroundTest.qml  SelectionToolSelectionBackgroundTest.qml
